--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,10 +1,10 @@
 .bg-gradient {
-    background: linear-gradient(to bottom right, #f2e772, #096137); /* Teal to Purple gradient */
+    background: linear-gradient(to top right, #1dad9e, #5961a5); /* Teal to Purple gradient */
     color: white; /* Set text color to white for better visibility */
 }
 
 .gradient {
-  background: linear-gradient(to bottom right, #f2e772, #096137);
+  background: linear-gradient(to top right, #1dad9e, #5961a5);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -134,3 +134,132 @@
 h1, h2, h3, h4, h5, h6 {
   padding-bottom: 3px;
 }
+
+:root {
+  --bs-dark: #464646;
+}
+
+.card {
+  box-shadow: 5px 5px #141414;
+  border: none;
+}
+
+/* Increase shadow effect on hover */
+.card:hover {
+  box-shadow: 10px 10px #141414;
+}
+
+
+.card-body {
+  border-radius: 5px;
+  border: 3px solid #141414;
+}
+
+.btn {
+  box-shadow: 5px 5px #141414;
+  border: none;
+}
+
+.btn:hover {
+  box-shadow: 10px 10px #141414;
+}
+
+.substack-embed:hover {
+  box-shadow: 10px 10px #141414;
+}
+
+.ubuntu-mono-regular {
+  font-family: "Ubuntu Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.ubuntu-mono-bold {
+  font-family: "Ubuntu Mono", monospace;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.ubuntu-mono-regular-italic {
+  font-family: "Ubuntu Mono", monospace;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.ubuntu-mono-bold-italic {
+  font-family: "Ubuntu Mono", monospace;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.col-4 {
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.col-4.revealed {
+  opacity: 1;
+}
+
+.card-body {
+  position: relative;
+}
+
+.card-content {
+  margin-bottom: 50px; /* Ensure space for the button */
+}
+
+.card-body .btn {
+  position: absolute;
+  bottom: 10px; /* Adjust as needed */
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.btn:hover {
+  color: black; /* Or any other color you prefer */
+}
+
+/* Gradient effect for button text */
+.btn {
+  position: relative;
+  overflow: hidden;
+}
+
+.btn::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom right, #ffc900, #b23386); /* Example gradient colors */
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.btn:hover::before {
+  opacity: 1;
+  z-index: -1; /* Ensure the gradient is behind the text */
+  pointer-events: none; /* Allow clicks to pass through to the button */
+}
+
+.card {
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.card.visible {
+  opacity: 1;
+}
+
+.animated-svg {
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.animated-svg.visible {
+  opacity: 1;
+}
+
+
